--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Advanced Purge & Build System
+name: Ultimate Purge & Build
 
 on:
   push:
@@ -17,32 +17,35 @@ jobs:
         with:
           flutter-version: '3.19.0'
 
-      - name: Run Advanced Purge Engine
-        run: python3 advanced_fixer.py
-
-      - name: System Reconstruction & Injection
+      - name: Run Nuclear Purger
+        # تشغيل الجراح الذي سيصلح حتى ملفات الـ Cache الخارجية
         run: |
-          # إعادة بناء الأندرويد وحقن الهوية (حل خطأ 2:25 و 12:32)
+          flutter pub get
+          python3 ultimate_purger.py
+
+      - name: Force System Alignment
+        run: |
+          # إعادة بناء الأندرويد من الصفر لضمان نقاء الهوية cent
           rm -rf android pubspec.lock
           flutter create . --platforms android --project-name cent
-          
-          # حقن مسارات النظام إجبارياً للسيرفر
           echo "sdk.dir=$ANDROID_SDK_ROOT" > android/local.properties
           echo "flutter.sdk=$FLUTTER_ROOT" >> android/local.properties
+          
+          # حقن النسخ يدوياً في الملف الرئيسي
+          sed -i 's/compileSdkVersion .*/compileSdkVersion 34/' android/app/build.gradle
           
           flutter pub get
           dart fix --apply
 
-      - name: Final Execution
+      - name: The Final Victory Build
         run: |
           flutter build apk --release \
             --no-tree-shake-icons \
-            --extra-front-end-options=--no-sound-null-safety \
-            --extra-gen-snapshot-options=--no-sound-null-safety
+            --extra-front-end-options=--no-sound-null-safety
 
-      - name: Artifact Deployment
+      - name: Deployment
         uses: actions/upload-artifact@v4
         with:
-          name: Cent-Global-Fixed-APK
+          name: Cent-Nuclear-Success
           path: build/app/outputs/flutter-apk/*.apk
           
