--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Cent Hyper-Sovereign Build
+name: Cent Master Build System
 
 on:
   push:
@@ -21,35 +21,35 @@ jobs:
         with:
           flutter-version: '3.19.0'
 
-      - name: Hyper-Surgical Execution
+      - name: Execute Full Surgery
         run: |
-          # جلب المكتبات لتثبيتها في الـ Cache قبل الجراحة
+          # جلب المكتبات لتظهر في الـ Cache قبل البدء بالجراحة
           flutter pub get || true
           
-          # تشغيل المصلح الفائق لتعديل كود المكتبات يدوياً
-          python3 hyper_fixer.py
+          # تشغيل المصلح الذي سيقوم بكيّ المكتبات المتمردة
+          python3 final_surgical_fixer.py
           
-          # إعادة إنشاء الهوية cent وتجاوز أخطاء النظام
+          # إعادة إنشاء هيكل الأندرويد لضمان نقاء الهوية cent
           rm -rf android pubspec.lock
           flutter create . --platforms android --project-name cent
           
-          # حقن المسارات النهائية
+          # حقن مسارات النظام يدوياً في الملفات الجديدة
           echo "sdk.dir=$ANDROID_SDK_ROOT" > android/local.properties
           echo "flutter.sdk=$FLUTTER_ROOT" >> android/local.properties
           
           flutter pub get
           dart fix --apply
 
-      - name: Ultimate Victory Build
+      - name: Final Force Build
         run: |
-          # بناء الـ APK متجاهلاً كل التحذيرات وبأقصى قوة معالجة
+          # بناء الـ APK مع تجاهل كافة الأخطاء والتحذيرات
           flutter build apk --release \
             --no-tree-shake-icons \
             --extra-front-end-options=--no-sound-null-safety
 
-      - name: Upload Success Artifact
+      - name: Upload Victory APK
         uses: actions/upload-artifact@v4
         with:
-          name: Cent-Ultimate-Victory-APK
+          name: Cent-Final-Victory-APK
           path: build/app/outputs/flutter-apk/*.apk
           
