--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Cent Master Build System
+name: Cent Ultimate Sovereign Build
 
 on:
   push:
@@ -21,13 +21,13 @@ jobs:
         with:
           flutter-version: '3.19.0'
 
-      - name: Execute Full Surgery
+      - name: Global Nuclear Execution
         run: |
-          # جلب المكتبات لتظهر في الـ Cache قبل البدء بالجراحة
-          flutter pub get || true
+          # جلب المكتبات لتثبيتها في الـ Cache قبل الجراحة
+          flutter pub get || true 
           
-          # تشغيل المصلح الذي سيقوم بكيّ المكتبات المتمردة
-          python3 final_surgical_fixer.py
+          # تشغيل المصلح الذي سيقوم بكيّ المكتبات المتمردة برمجياً
+          python3 nuclear_fixer.py
           
           # إعادة إنشاء هيكل الأندرويد لضمان نقاء الهوية cent
           rm -rf android pubspec.lock
@@ -40,16 +40,17 @@ jobs:
           flutter pub get
           dart fix --apply
 
-      - name: Final Force Build
+      - name: The Final Victory Build
         run: |
-          # بناء الـ APK مع تجاهل كافة الأخطاء والتحذيرات
+          # بناء الـ APK متجاهلاً كل التحذيرات والأخطاء المنطقية
           flutter build apk --release \
             --no-tree-shake-icons \
-            --extra-front-end-options=--no-sound-null-safety
+            --extra-front-end-options=--no-sound-null-safety \
+            --extra-gen-snapshot-options=--no-sound-null-safety
 
-      - name: Upload Victory APK
+      - name: Upload Victory Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Cent-Final-Victory-APK
+          name: Cent-Sovereign-APK
           path: build/app/outputs/flutter-apk/*.apk
           
