--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CENT - ABSOLUTE POWER BUILD
+name: CENT - GLOBAL RECONSTRUCTION BUILD
 
 on:
   push:
@@ -9,10 +9,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Force Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Force Setup Java & Flutter
+      - name: Setup Java 17 & Flutter
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
@@ -21,36 +21,37 @@ jobs:
         with:
           flutter-version: '3.19.0'
 
-      - name: The Great Purge Execution
+      - name: Total Project Overhaul
         run: |
-          # جلب المكتبات لتثبيتها في الـ Cache قبل إبادتها
+          # 1. جلب المكتبات أولاً لتثبيتها في الـ Cache
           flutter pub get || true 
           
-          # تشغيل المحرق الشامل لحقن القيم في السيرفر
-          python3 ultimate_annihilator.py
+          # 2. إطلاق "المعالج الكوني" لتطهير المستودع والمكتبات يدوياً
+          python3 project_annihilator.py
           
-          # مسح هيكل الأندرويد وإعادة خلقه من العدم باسم cent
+          # 3. مسح الهوية القديمة وإعادة بناء أندرويد باسم cent الصافي
           rm -rf android pubspec.lock
           flutter create . --platforms android --project-name cent
           
-          # حقن المسارات الصلبة في قلب المشروع الجديد
+          # 4. حقن الإعدادات الصلبة في الهوية الجديدة
           echo "sdk.dir=$ANDROID_SDK_ROOT" > android/local.properties
           echo "flutter.sdk=$FLUTTER_ROOT" >> android/local.properties
           
+          # 5. تطهير أخير للتبعيات
           flutter pub get
           dart fix --apply
 
-      - name: The Final Victory (No Mercy Build)
+      - name: Force APK Build
         run: |
-          # البناء بأقصى قوة مع سحق كافة القيود والتحذيرات
+          # بناء الـ APK متجاهلاً كافة التحذيرات والأخطاء المنطقية
           flutter build apk --release \
             --no-tree-shake-icons \
             --extra-front-end-options=--no-sound-null-safety \
             --extra-gen-snapshot-options=--no-sound-null-safety
 
-      - name: Deliver The Sovereign APK
+      - name: Upload Victory APK
         uses: actions/upload-artifact@v4
         with:
-          name: Cent-Ultimate-APK
+          name: Cent-Global-Victory-APK
           path: build/app/outputs/flutter-apk/*.apk
           
