--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,386 +1,45 @@
-name: Flutter Production Build Pipeline
+name: Build Flutter APK
 
 on:
   push:
-    branches: [main, develop, master]
+    branches: [ main, master ]
   pull_request:
-    branches: [main, develop, master]
-  workflow_dispatch:
-    inputs:
-      skip_tests:
-        description: 'Skip test execution'
-        required: false
-        default: 'false'
+    branches: [ main, master ]
 
 env:
   FLUTTER_VERSION: '3.19.0'
   JAVA_VERSION: '17'
-  PROJECT_NAME: 'cent'
-  ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
-  ANDROID_HOME: /usr/local/lib/android/sdk
 
 jobs:
   build:
-    name: Build APK
     runs-on: ubuntu-latest
-    timeout-minutes: 60
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          clean: true
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Setup Java 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'gradle'
+    - name: Setup Java
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: ${{ env.JAVA_VERSION }}
 
-      - name: Verify Java Installation
-        run: |
-          echo "Java Version:"
-          java -version
-          echo "JAVA_HOME: $JAVA_HOME"
+    - name: Setup Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: ${{ env.FLUTTER_VERSION }}
+        cache: true
+        cache-key: flutter-${{ env.FLUTTER_VERSION }}
+        cache-path: ${{ runner.tool_cache }}/flutter
 
-      - name: Setup Flutter 3.19.0
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.19.0'
-          channel: 'stable'
-          cache: true
+    - name: Run fix script
+      run: python3 project_sovereign.py .
 
-      - name: Verify Flutter Installation
-        run: |
-          echo "Flutter Version:"
-          flutter --version
-          flutter doctor -v
+    - name: Get dependencies
+      run: flutter pub get
 
-      - name: Accept Android Licenses
-        run: |
-          yes | flutter doctor --android-licenses || true
-
-      - name: Setup Python 3.10
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-
-      - name: Verify Python Installation
-        run: |
-          echo "Python Version:"
-          python3 --version
-
-      - name: Validate Project Sovereign Script
-        run: |
-          if [ -f "project_sovereign.py" ]; then
-            echo "Project Sovereign script found"
-            python3 -m py_compile project_sovereign.py
-            echo "Script validation passed"
-          else
-            echo "ERROR: project_sovereign.py not found in repository"
-            exit 1
-          fi
-
-      - name: Execute Project Sovereign
-        id: sovereign
-        run: |
-          echo "========================================="
-          echo "EXECUTING PROJECT SOVEREIGN"
-          echo "========================================="
-          python3 project_sovereign.py "$(pwd)" 2>&1 | tee sovereign_log.txt
-          EXIT_CODE=${PIPESTATUS[0]}
-          if [ $EXIT_CODE -eq 0 ]; then
-            echo "Project Sovereign completed successfully"
-            echo "status=success" >> $GITHUB_OUTPUT
-          else
-            echo "Project Sovereign encountered issues"
-            echo "status=warning" >> $GITHUB_OUTPUT
-          fi
-          echo "========================================="
-        continue-on-error: false
-
-      - name: Upload Sovereign Log
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: sovereign-log
-          path: sovereign_log.txt
-          retention-days: 30
-
-      - name: Nuclear Clean Android Directory
-        run: |
-          echo "Removing android directory..."
-          if [ -d "android" ]; then
-            rm -rf android/
-            echo "Android directory removed"
-          else
-            echo "Android directory does not exist"
-          fi
-
-      - name: Nuclear Clean Lock Files
-        run: |
-          echo "Removing lock files..."
-          rm -f pubspec.lock
-          rm -f ios/Podfile.lock || true
-          rm -rf ios/.symlinks || true
-          rm -rf ios/Pods || true
-          rm -rf build/ || true
-          rm -rf .dart_tool/ || true
-          echo "Lock files and build artifacts removed"
-
-      - name: Re-Initialize Project
-        run: |
-          echo "Re-initializing project: ${{ env.PROJECT_NAME }}"
-          cp pubspec.yaml pubspec.yaml.backup
-          flutter create . --project-name ${{ env.PROJECT_NAME }} --org com.sovereign --platforms android,ios
-          if [ -f "pubspec.yaml.backup" ]; then
-            mv pubspec.yaml.backup pubspec.yaml
-            echo "Original pubspec.yaml restored"
-          fi
-          echo "Project re-initialized successfully"
-
-      - name: Reconstruct local.properties
-        run: |
-          echo "Creating android/local.properties..."
-          mkdir -p android
-          cat > android/local.properties <<'LOCALPROPS'
-          sdk.dir=/usr/local/lib/android/sdk
-          flutter.sdk=/opt/hostedtoolcache/flutter/stable-3.19.0-x64
-          flutter.buildMode=release
-          flutter.versionName=1.0.0
-          flutter.versionCode=1
-          LOCALPROPS
-          echo "local.properties created successfully"
-          cat android/local.properties
-
-      - name: Configure Gradle Properties
-        run: |
-          echo "Configuring gradle.properties..."
-          mkdir -p android
-          cat > android/gradle.properties <<'GRADLEPROPS'
-          org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m
-          org.gradle.parallel=true
-          org.gradle.caching=true
-          org.gradle.daemon=true
-          android.useAndroidX=true
-          android.enableJetifier=true
-          android.enableR8.fullMode=true
-          flutter.minSdkVersion=21
-          flutter.targetSdkVersion=34
-          flutter.compileSdkVersion=34
-          GRADLEPROPS
-          echo "gradle.properties configured successfully"
-
-      - name: Flutter Clean
-        run: |
-          flutter clean
-          echo "Flutter clean completed"
-        continue-on-error: true
-
-      - name: Get Dependencies
-        run: |
-          echo "Getting dependencies..."
-          flutter pub get --verbose
-          echo "Dependencies resolved"
-        continue-on-error: true
-
-      - name: Verify Dependencies
-        run: |
-          if [ -f "pubspec.lock" ]; then
-            echo "pubspec.lock generated successfully"
-          else
-            echo "Warning: pubspec.lock not found"
-          fi
-        continue-on-error: true
-
-      - name: Static Analysis
-        run: |
-          flutter analyze --no-fatal-infos --no-fatal-warnings || true
-        continue-on-error: true
-
-      - name: Pre-Build Diagnostics
-        run: |
-          echo "========================================="
-          echo "PRE-BUILD DIAGNOSTICS"
-          echo "========================================="
-          echo "Flutter: $(flutter --version | head -n 1)"
-          echo "Dart: $(dart --version)"
-          echo "Java: $(java -version 2>&1 | head -n 1)"
-          echo "Working Directory: $(pwd)"
-          echo "========================================="
-
-      - name: Build APK Release
-        id: build_apk
-        run: |
-          echo "========================================="
-          echo "BUILDING APK - RELEASE MODE"
-          echo "========================================="
-          BUILD_START=$(date +%s)
-          flutter build apk \
-            --release \
-            --no-tree-shake-icons \
-            --extra-front-end-options=--no-sound-null-safety \
-            --extra-gen-snapshot-options=--no-sound-null-safety \
-            --verbose
-          BUILD_EXIT=$?
-          BUILD_END=$(date +%s)
-          BUILD_DURATION=$((BUILD_END - BUILD_START))
-          echo "========================================="
-          if [ $BUILD_EXIT -eq 0 ]; then
-            echo "BUILD SUCCESS"
-            echo "Duration: ${BUILD_DURATION}s"
-            echo "status=success" >> $GITHUB_OUTPUT
-            if [ -f "build/app/outputs/flutter-apk/app-release.apk" ]; then
-              APK_SIZE=$(du -h build/app/outputs/flutter-apk/app-release.apk | cut -f1)
-              echo "APK Size: $APK_SIZE"
-              echo "apk_size=$APK_SIZE" >> $GITHUB_OUTPUT
-            fi
-          else
-            echo "BUILD FAILED"
-            echo "Exit Code: $BUILD_EXIT"
-            echo "status=failed" >> $GITHUB_OUTPUT
-          fi
-          echo "========================================="
-          exit $BUILD_EXIT
-        continue-on-error: false
-
-      - name: Verify Build Artifacts
-        if: steps.build_apk.outputs.status == 'success'
-        run: |
-          APK_PATH="build/app/outputs/flutter-apk/app-release.apk"
-          if [ -f "$APK_PATH" ]; then
-            echo "APK verified: $APK_PATH"
-            echo "Size: $(du -h $APK_PATH | cut -f1)"
-            echo "SHA256: $(sha256sum $APK_PATH | cut -d' ' -f1)"
-          else
-            echo "ERROR: APK not found"
-            exit 1
-          fi
-
-      - name: Build Split APKs
-        if: steps.build_apk.outputs.status == 'success' && github.event_name == 'workflow_dispatch'
-        run: |
-          echo "Building split APKs..."
-          flutter build apk \
-            --release \
-            --split-per-abi \
-            --no-tree-shake-icons \
-            --extra-front-end-options=--no-sound-null-safety \
-            --extra-gen-snapshot-options=--no-sound-null-safety || true
-          echo "Split APKs build completed"
-        continue-on-error: true
-
-      - name: Build App Bundle
-        if: steps.build_apk.outputs.status == 'success' && github.event_name != 'pull_request'
-        run: |
-          echo "Building app bundle..."
-          flutter build appbundle \
-            --release \
-            --no-tree-shake-icons \
-            --extra-front-end-options=--no-sound-null-safety \
-            --extra-gen-snapshot-options=--no-sound-null-safety || true
-          if [ -f "build/app/outputs/bundle/release/app-release.aab" ]; then
-            echo "AAB Size: $(du -h build/app/outputs/bundle/release/app-release.aab | cut -f1)"
-          fi
-        continue-on-error: true
-
-      - name: Run Tests
-        if: github.event.inputs.skip_tests != 'true'
-        run: |
-          flutter test --coverage --verbose || true
-        continue-on-error: true
-
-      - name: Collect Pipeline Artifacts
-        if: always()
-        run: |
-          mkdir -p pipeline_artifacts
-          cp sovereign_log.txt pipeline_artifacts/ 2>/dev/null || true
-          cat > pipeline_artifacts/summary.txt <<'SUMMARY'
-          ========================================
-          PIPELINE EXECUTION SUMMARY
-          ========================================
-          Workflow: ${{ github.workflow }}
-          Run ID: ${{ github.run_id }}
-          Trigger: ${{ github.event_name }}
-          Branch: ${{ github.ref_name }}
-          Commit: ${{ github.sha }}
-          Actor: ${{ github.actor }}
-          Flutter: ${{ env.FLUTTER_VERSION }}
-          Java: ${{ env.JAVA_VERSION }}
-          Project: ${{ env.PROJECT_NAME }}
-          Status: ${{ steps.build_apk.outputs.status }}
-          APK Size: ${{ steps.build_apk.outputs.apk_size }}
-          ========================================
-          SUMMARY
-          cat pipeline_artifacts/summary.txt
-
-      - name: Upload Build Artifacts
-        if: steps.build_apk.outputs.status == 'success'
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-apk
-          path: |
-            build/app/outputs/flutter-apk/*.apk
-            build/app/outputs/bundle/release/*.aab
-          retention-days: 90
-          if-no-files-found: warn
-
-      - name: Upload Pipeline Logs
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: pipeline-logs
-          path: pipeline_artifacts/
-          retention-days: 30
-
-      - name: Upload Failure Diagnostics
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: failure-diagnostics
-          path: |
-            sovereign_log.txt
-            android/
-          retention-days: 30
-        continue-on-error: true
-
-      - name: Build Status Summary
-        if: always()
-        run: |
-          echo "========================================="
-          echo "PIPELINE EXECUTION COMPLETE"
-          echo "========================================="
-          if [ "${{ steps.build_apk.outputs.status }}" == "success" ]; then
-            echo "Build: SUCCESS"
-            echo "Artifacts: Ready for deployment"
-          else
-            echo "Build: FAILED"
-            echo "Review logs for error details"
-          fi
-          echo "========================================="
-
-      - name: Generate Job Summary
-        if: always()
-        run: |
-          echo "### Flutter Build Pipeline - Execution Report" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Workflow:** ${{ github.workflow }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Run ID:** ${{ github.run_id }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Trigger:** ${{ github.event_name }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "#### Environment" >> $GITHUB_STEP_SUMMARY
-          echo "- Flutter: ${{ env.FLUTTER_VERSION }}" >> $GITHUB_STEP_SUMMARY
-          echo "- Java: ${{ env.JAVA_VERSION }}" >> $GITHUB_STEP_SUMMARY
-          echo "- Project: ${{ env.PROJECT_NAME }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "#### Results" >> $GITHUB_STEP_SUMMARY
-          if [ "${{ steps.build_apk.outputs.status }}" == "success" ]; then
-            echo "- Status: SUCCESS" >> $GITHUB_STEP_SUMMARY
-            echo "- APK Size: ${{ steps.build_apk.outputs.apk_size }}" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "- Status: FAILED" >> $GITHUB_STEP_SUMMARY
-          fi
-          echo "" >> $GITHUB_STEP_SUMMARY
+    - name: Build APK
+      run: |
+        flutter build apk --release \
+          --no-tree-shake-icons \
+          --extra-front-end-options=--no-sound-null-safety
