--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,25 +4,32 @@ version: 1.0.0+1
 publish_to: 'none'
 
 environment:
-  # تعديل الـ SDK ليدعم الكود القديم والجديد ويحل مشكلة Null Safety
-  sdk: '>=2.12.0 <4.0.0'
+  # تم ضبط الـ SDK ليكون متوافقاً مع أحدث إصدارات Flutter والمكتبات المستخدمة
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.6
-  youtube_explode_dart: ^2.2.2
+  
+  # المكتبات الأساسية لمحرك الصوت (Audio Kernel)
   just_audio: ^0.9.36
   audio_session: ^0.1.18
+  rxdart: ^0.27.7  # ضرورية جداً لنظام الـ Streams في كود ديب سيك
+  
+  # مكتبات الواجهة والتصميم (Black & Gold UI)
+  google_fonts: ^6.1.0
+  cupertino_icons: ^1.0.6
   flutter_spinkit: ^5.2.0
   cached_network_image: ^3.3.0
-  google_fonts: ^6.1.0
-  provider: ^6.1.1
+  
+  # مكتبات النظام ومعالجة البيانات
   path_provider: ^2.1.2
   crypto: ^3.0.3
-  # تحديث النسخة لحل خطأ "version solving failed" الذي ظهر في الصور
-  fft: ^0.5.1
   permission_handler: ^11.3.1
+  
+  # مكتبات إضافية قد تحتاجها للتحميل أو التعامل مع اليوتيوب مستقبلاً
+  youtube_explode_dart: ^2.2.2
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
@@ -31,6 +38,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  # تأكد من وجود ملف الخط في مجلد fonts/ وإلا قم بإلغاء هذا القسم إذا لم يتوفر الملف حالياً
   fonts:
     - family: Michroma
       fonts:
