--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        // تحديث أداة بناء أندرويد لتدعم SDK 35 و Java 17
+        // استخدام إصدار مستقر يدعم Java 17 و SDK 34/35 بامتياز
         classpath 'com.android.tools.build:gradle:8.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
@@ -24,7 +24,7 @@ subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
 
-// إعداد هام لضمان ترتيب بناء المحركات الصوتية والرسومية
+// ضمان أن عملية التقييم تبدأ من التطبيق الرئيسي أولاً
 subprojects {
     project.evaluationDependsOn(':app')
 }
@@ -33,13 +33,20 @@ tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
 
-// إضافة إعدادات التوافق العالمية للمشروع
+// إعدادات التوافق العالمية - تمنع أخطاء الـ Namespace التي تظهر في المشاريع الضخمة
 subprojects {
     afterEvaluate { project ->
         if (project.hasProperty('android')) {
             project.android {
-                if (namespace == null) {
-                    namespace project.group
+                // حل مشكلة الـ Namespace للمكتبات القديمة تلقائياً
+                if (namespace == null || namespace.isEmpty()) {
+                    namespace = "com.cent.music"
+                }
+                
+                // توحيد إصدار جافا في كل المكتبات الفرعية لمنع تعارض الـ Bytecode
+                compileOptions {
+                    sourceCompatibility JavaVersion.VERSION_17
+                    targetCompatibility JavaVersion.VERSION_17
                 }
             }
         }
