--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,46 +1,59 @@
 name: cent
-description: A high-performance, encrypted audio streaming engine.
+description: A high-performance music streaming application.
 version: 1.0.0+1
 publish_to: 'none'
 
 environment:
-  # تم ضبط الـ SDK ليكون متوافقاً مع أحدث إصدارات Flutter والمكتبات المستخدمة
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   
-  # المكتبات الأساسية لمحرك الصوت (Audio Kernel)
-  just_audio: ^0.9.36
-  audio_session: ^0.1.18
-  rxdart: ^0.27.7  # ضرورية جداً لنظام الـ Streams في كود ديب سيك
+  # Core Audio Engine
+  just_audio: ^0.10.5
+  audio_service: ^0.19.0
+  rxdart: ^0.27.7
   
-  # مكتبات الواجهة والتصميم (Black & Gold UI)
-  google_fonts: ^6.1.0
-  cupertino_icons: ^1.0.6
-  flutter_spinkit: ^5.2.0
-  cached_network_image: ^3.3.0
+  # UI & Design
+  google_fonts: ^6.2.0
+  cupertino_icons: ^1.0.8
+  flutter_spinkit: ^5.2.2
+  cached_network_image: ^3.4.0
   
-  # مكتبات النظام ومعالجة البيانات
-  path_provider: ^2.1.2
-  crypto: ^3.0.3
+  # Network & YouTube
+  http: ^1.2.2
+  youtube_explode_dart: ^2.5.3
+  
+  # State Management
+  provider: ^6.1.1
+  
+  # System & Permissions
+  path_provider: ^2.1.4
   permission_handler: ^11.3.1
   
-  # مكتبات إضافية قد تحتاجها للتحميل أو التعامل مع اليوتيوب مستقبلاً
-  youtube_explode_dart: ^2.2.2
-  provider: ^6.1.1
+  # Database
+  sqflite: ^2.3.3+1
+  
+  # Utilities
+  crypto: ^3.0.3
+  uuid: ^4.5.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^3.0.2
 
 flutter:
   uses-material-design: true
-  # تأكد من وجود ملف الخط في مجلد fonts/ وإلا قم بإلغاء هذا القسم إذا لم يتوفر الملف حالياً
-  fonts:
-    - family: Michroma
-      fonts:
-        - asset: fonts/Michroma-Regular.ttf
-        
+  
+  # Remove fonts section if you don't have the font file
+  # fonts:
+  #   - family: Michroma
+  #     fonts:
+  #       - asset: fonts/Michroma-Regular.ttf
+  
+  assets:
+    - assets/
+    - assets/icons/
+    - assets/images/
