--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: cent
-description: A high-performance music streaming application.
+description: A high-performance, encrypted audio streaming engine.
 version: 1.0.0+1
 publish_to: 'none'
 
@@ -10,50 +10,36 @@ dependencies:
   flutter:
     sdk: flutter
   
-  # Core Audio Engine
-  just_audio: ^0.10.5
-  audio_service: ^0.19.0
+  # المكتبات الأساسية لمحرك الصوت
+  just_audio: ^0.10.5  # ⚠️ تم التحديث من 0.9.36
+  audio_session: ^0.2.2  # ⚠️ تم التحديث من 0.1.18
   rxdart: ^0.27.7
   
-  # UI & Design
-  google_fonts: ^6.2.0
-  cupertino_icons: ^1.0.8
-  flutter_spinkit: ^5.2.2
-  cached_network_image: ^3.4.0
+  # مكتبات الواجهة والتصميم
+  google_fonts: ^6.1.0
+  cupertino_icons: ^1.0.6
+  flutter_spinkit: ^5.2.0
+  cached_network_image: ^3.3.0
   
-  # Network & YouTube
-  http: ^1.2.2
-  youtube_explode_dart: ^2.5.3
-  
-  # State Management
-  provider: ^6.1.1
-  
-  # System & Permissions
-  path_provider: ^2.1.4
+  # مكتبات النظام ومعالجة البيانات
+  path_provider: ^2.1.2
+  crypto: ^3.0.3
   permission_handler: ^11.3.1
   
-  # Database
-  sqflite: ^2.3.3+1
-  
-  # Utilities
-  crypto: ^3.0.3
-  uuid: ^4.5.2
+  # مكتبات إضافية
+  youtube_explode_dart: ^2.5.3  # ⚠️ تم التحديث من 2.2.2
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.2
+  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
   
-  # Remove fonts section if you don't have the font file
+  # إزالة قسم الخطوط إذا لم يكن الملف موجوداً
   # fonts:
   #   - family: Michroma
   #     fonts:
   #       - asset: fonts/Michroma-Regular.ttf
-  
-  assets:
-    - assets/
-    - assets/icons/
-    - assets/images/
