--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,9 @@
 buildscript {
-    ext.kotlin_version = '1.9.22'
+    ext.kotlin_version = '1.8.22'
     repositories {
         google()
         mavenCentral()
+        jcenter()  # ⚠️ إضافة مهمة
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.1.0'
@@ -14,7 +15,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
+        jcenter()  # ⚠️ إضافة مهمة
     }
 }
 
@@ -22,22 +23,10 @@ rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
-
 subprojects {
     project.evaluationDependsOn(':app')
 }
 
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
-}
-
-// Configure all Android projects
-gradle.projectsEvaluated {
-    subprojects {
-        if (project.hasProperty('android')) {
-            android {
-                compileSdkVersion 34
-            }
-        }
-    }
 }
