--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Build Cent Supreme APK
 on:
   push:
     branches: [ main, master ]
-  workflow_dispatch:  # للتفعيل اليدوي
+  workflow_dispatch:
 
 jobs:
   build:
@@ -22,25 +22,26 @@ jobs:
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.19.0'
+        flutter-version: '3.38.9'  # ⚠️ الجديد
         channel: 'stable'
 
-    # تشغيل الإصلاح الجراحي
+    - name: Prepare Scripts
+      run: chmod +x project_sovereign.py
+
     - name: Run Sovereign Surgical Fix
       run: python3 project_sovereign.py .
 
-    # إنشاء local.properties للمسارات الصحيحة
     - name: Create local.properties for CI
       run: |
         echo "sdk.dir=$ANDROID_HOME" > android/local.properties
         echo "flutter.sdk=$FLUTTER_ROOT" >> android/local.properties
         echo "flutter.versionName=1.0.0" >> android/local.properties
         echo "flutter.versionCode=1" >> android/local.properties
+        echo "flutter.buildMode=release" >> android/local.properties
 
     - name: Get Dependencies
       run: |
         flutter pub get
-        flutter pub upgrade
 
     - name: Build APK
       run: |
